gcc/gcc/testsuite/algol60.dg/fail/labels2.a60
'comment' { dg-do compile } ;
'begin'
	label1:
	'begin' label1: 'end'; 'comment' { dg-error "duplicate" } ;
'end';
